<resources>
    <string name="app_name">Siboon</string>
    <string name="title_home">Inicio</string>
    <string name="title_cart">Carrinho</string>
    <string name="title_profile">Perfil</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Registro</string>
    <string name="password">Senha</string>
    <string name="new_at_siboon">Novo na Siboon?</string>
    <string name="register"><u>CADASTRE-SE</u></string>

    <string name="signup_title">CRIAR CONTA</string>
    <string name="signup_et_name">Nome *</string>
    <string name="signup_et_lastname">Sobrenome *</string>
    <string name="signup_et_email">E-mail *</string>
    <string name="signup_et_password">Senha *</string>
    <string name="signup_btn_register">CADASTRAR</string>
    <string name="signup_has_registration">Já possui cadastro?</string>
    <string name="signup_enter"><u>ENTRAR</u></string>

    <string name="login_title">ACESSE SUA CONTA</string>
    <string name="login_btn">ENTRAR</string>
    <string name="user_picture">Foto do usuário</string>
    <string name="buy">Comprar</string>
    <string name="localCart">Carrinho</string>
    <string name="loading">Carregando…</string>
    <string name="e_mail">E-mail</string>
    <string name="empty_cart">O seu carrinho está vazio.</string>
    <string name="configs">Configurações</string>
    <string name="personal_data">Dados Pessoais</string>
    <string name="address">Endereço</string>
    <string name="my_orders">Meus Pedidos</string>
    <string name="self_service">Autoatendimento</string>
    <string name="logout">Sair da sessão</string>
    <string name="delete_product">Remover produto</string>
    <string name="price_pix">Preço à vista no PIX:</string>
    <string name="decrease_quantity">Diminuir quantidade</string>
    <string name="increase_quantity">Aumentar quantidade</string>
</resources>